<resources>
    <string name="app_name">FirstApplication</string>
    <string name="counterInit">0</string>
    <string name="resetButton">Reset</string>
    <string name="gra_1">Gra 1</string>
    <string name="gra_2">Gra 2</string>
    <string name="gra_3">Gra 3</string>
    <string name="initValue">0</string>
    <string name="ilosc_prob">Ilość prób: </string>
    <string name="current_level">Poziom:</string>
    <string name="current_level_record">Rekord poziomu:</string>
    <string name="current_level_value">"current_level_value"</string>
    <string name="test_algorithm">Test algorytmu</string>
    <string name="new_game">Nowa gra</string>
    <string name="trials_number">Liczba prób:</string>
    <string name="zero_value">0</string>
</resources>