<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <Button
            android:id="@+id/buttonGame1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gra_1" />

        <Button
            android:id="@+id/buttonGame2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gra_2" />

        <Button
            android:id="@+id/buttonGame3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gra_3" />
    </LinearLayout>
</RelativeLayout>