<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Game2Activity">

    <TextView
        android:id="@+id/levelView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/current_level"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/levelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@id/levelView"
        android:text="@string/initValue"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/counterView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@id/counterTextView"
        android:text="@string/ilosc_prob"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/counterTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:text="@string/initValue"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/recordView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:text="@string/current_level_record"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/recordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@id/recordView"
        android:text="@string/initValue"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/centerView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerInParent="true"
        android:background="#81D6CE"
        android:gravity="center"
        android:text="@string/initValue"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/viewDown"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/centerView"
        android:layout_centerInParent="true"
        android:background="#2EE4D3"
        android:gravity="center"
        android:text="@string/initValue"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/viewUp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_above="@id/centerView"
        android:layout_centerInParent="true"
        android:background="#2EE4D3"
        android:gravity="center"
        android:text="@string/initValue"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/viewLeft"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:layout_toStartOf="@id/centerView"
        android:background="#2EE4D3"
        android:gravity="center"
        android:text="@string/initValue"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/viewRight"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:layout_toEndOf="@id/centerView"
        android:background="#2EE4D3"
        android:gravity="center"
        android:text="@string/initValue"
        android:textSize="25sp" />
</RelativeLayout>